--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 
 :root {
   --header-height: 3.5rem;
@@ -13,7 +13,7 @@
   --border-color: hsl(var(--hue), 23%, 24%);
   --black: #000;
 
-  --body-font: 'Montserrat', sans-serif;
+  --body-font: "Montserrat", sans-serif;
   --big-font-size: 2.5rem;
   --h1-font-size: 1.75rem;
   --h2-font-size: 1.5rem;
@@ -79,19 +79,90 @@ img {
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
+.container {
+  max-width: 1400px;
+  margin-inline: auto;
+  padding-inline: 0.75rem;
+}
 
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
 /*=============== HEADER & NAV ===============*/
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.nav {
+  height: calc(var(--header-height) + 1rem);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__list {
+  display: flex;
+  column-gap: 1.75rem;
+}
+
+.nav__link {
+  color: var(--title-color);
+  transition: all 0.3s var(--transition);
+}
 
 /* Scroll header */
 
 /* Active link */
-
+.nav__link:hover,
+.active-link {
+  color: var(--first-color);
+}
 /*=============== HOME ===============*/
+.home {
+  background-image: url(../img/bg.jpg);
+  background-size: cover;
+  background-position: center;
+  padding-block: 6rem 2rem;
+}
 
+.home__container {
+  grid-template-columns: 4fr 8fr;
+  align-items: center;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  text-transform: uppercase;
+}
+
+.home__description {
+  margin-block: 1.25rem 1.5rem;
+}
 /*=============== BUTTON ===============*/
-
+.btn {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--title-color);
+  padding: 1rem 1.5rem;
+  border-radius: 0.25rem;
+  font-weight: var(--weight-500);
+}
 /*=============== BRAND ===============*/
+.brand__item {
+  background-color: var(--container-color);
+  height: 100px;
+  border-radius: 0.5rem;
+  display: grid;
+  place-items: center;
+}
 
+.brand__logo {
+  width: 88%;
+}
 /*=============== ANIME ===============*/
 
 /*=============== SUBSCRIPTION ===============*/
