--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,6 +104,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 50;
 }
 
 .nav {
@@ -124,7 +125,9 @@ img {
 }
 
 /* Scroll header */
-
+.scroll-header {
+  background-color: var(--black);
+}
 /* Active link */
 .nav__link:hover,
 .active-link {
